--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,9 @@ version: "3.9"
 
 services:
 
-  storage-controller:
+  ceph-connector:
     build:
       context: .
       dockerfile: src/Dockerfile
     env_file:
       - .env
-    depends_on:
-      - rabbitmq
