--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,11 +1,20 @@
-FROM node:20-slim
-
+FROM node:22-alpine AS builder
 WORKDIR /app
 
-COPY package.json tsconfig.json ./
-COPY src ./src
+COPY package.json package-lock.json* ./
+RUN npm install
 
-RUN npm install --production=false
+COPY . .
 RUN npm run build
 
+FROM node:22-alpine AS runner
+ENV NODE_ENV=production
+WORKDIR /app
+
+COPY package.json package-lock.json* ./
+RUN npm install --omit=dev
+
+COPY --from=builder /app/dist ./dist
+
+EXPOSE 8080
 CMD ["node", "dist/app.js"]
